tests/lean/pp_links.lean.expected.out
pp_links.lean:6:63: error: tactic failed, there are unsolved goals
state:
⊢ forall∀ (i : intℤ),
    (i, i).prod.sndsndeq =
      ihas_add.add + 0has_add.add +
        point.mk{point.xx := 0, point.yy := i}.point.xx
